# hwo-tools

./: .gitignore  BasicRun.ipynb  BasicRun.py  Camera_ETC_Tutorial.ipynb  MinimalCoron.py  README.md  SourceBasicRun.py  UVSpec_ETC_Tutorial.ipynb  bokeh_notebook.ipynb  hwotools.yml  template_information.txt  uvspec_wrapper.ipynb
coron_model/: README.md  ah_bootstrap.py  changes_to_model.docx  coron_help.py  coron_model_test.py  coron_readme.txt  main.py  main_safe.py  onirs_model.py  setup.cfg  setup.py
coron_model/apps/for_website/: coron_readme.txt  onirs_model.html  onirs_readme.txt
coron_model/coronagraph/: Observation.py  Spectrum.py  __init__.py  call_noise.py  convolve_spec.py  count_rates.py  count_rates_onirs.py  count_rates_wrapper.py  degrade_spec.py  make_noise.py  noise_routines.py  observe.py  teleplanstar.py  utils.py
coron_model/coronagraph/data/: Al_reflect.csv  Au_reflect.csv  optical_throughput.txt
coron_model/coronagraph/filters/: imager.py
coron_model/coronagraph/ground/: earth_transmission.txt
coron_model/coronagraph/inputs/: input_default_telescope.py  input_user_planet.py  input_user_star.py
coron_model/coronagraph/planets/: ArcheanEarth_geo_albedo.txt  subneptune.txt
coron_model/docs/: installation.rst  rtd-pip-requirements
coron_model/examples/: ground_demo.py  luvoir_demo.py
coron_model/old/: LICENSE  setup.py
coron_model/old/docs/: api.rst  (+2 more)
coron_model/planets/: SunKuruczSpectrum.txt
coron_model/star_galaxy/: NGC_4194_S_Uv-MIr_bms2014.txt  NGC_4621_S_Uv-MIr_bms2014.txt
coron_model/templates/: index.html  styles.css
(+383 files in other folders)
