[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = coronagraph
description = Coronagraph equipped telescope noise model
long_description = This will be updated soon!
author = Jacob Lustig-Yaeger
author_email = jlustigy@uw.edu
license = BSD
url = https://github.com/jlustigy/coronagraph
edit_on_github = False
github_project = jlustigy/coronagraph
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.dev

[entry_points]
astropy-package-template-example = packagename.example_mod:main
